# BLEEP-V1

./: CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TESTNET_FAUCET_CHANGES.md  governance_state.json  tx.json
.github/: FUNDING.yml
config/: genesis.json  mainnet_config.json  testnet_config.json
crates/bleep-ai/: Cargo.toml  LICENSE
crates/bleep-ai/src/: ai_assistant.rs  ai_attestation.rs  ai_consensus_integration.rs  ai_constraint_validator.rs  ai_decision_module.rs  ai_feedback_loop.rs  ai_proposal_types.rs  bleep_automation.rs  contract_optimization.rs  decision_engine.rs  deterministic_inference.rs  feature_extractor.rs  governance.rs  governance_integration.rs  interoperability.rs  lib.rs  machine_learning.rs  mod.rs  smart_contracts.rs  tests.rs
crates/bleep-auth/: Cargo.toml
crates/bleep-auth/src/: audit.rs  audit_store.rs  lib.rs  rbac.rs  validator_binding.rs
crates/bleep-cli/: Cargo.toml
crates/bleep-cli/src/: cli.rs  lib.rs
crates/bleep-consensus/: Cargo.toml
crates/bleep-consensus/src/: ai_adaptive_logic.rs  block_producer.rs  blockchain_state.rs  chaos_engine.rs  consensus.rs  gossip_bridge.rs  lib.rs  mod.rs  networking.rs  pbft_engine.rs  performance_bench.rs  pos_engine.rs  security_audit.rs  shard_coordinator.rs  tests.rs
crates/bleep-consensus/src/consensus/: networking.rs
crates/bleep-core/: Cargo.toml
crates/bleep-core/src/: anti_asset_loss.rs  block.rs  block_validation.rs  blockchain.rs  lib.rs  mempool.rs  merkle_tree.rs  mod.rs  networking.rs  proof_of_identity.rs  state.rs  tests.rs  transaction.rs  transaction_manager.rs  transaction_pool.rs
crates/bleep-crypto/: Cargo.toml
crates/bleep-crypto/src/: anti_asset_loss.rs  bip39.rs  lib.rs  logging.rs  merkletree.rs  mod.rs  pq_crypto.rs  quantum_resistance.rs  quantum_secure.rs  tests.rs  tx_signer.rs  zkp_verification.rs
crates/bleep-economics/src/: distribution.rs  lib.rs  oracle_bridge.rs  runtime.rs  tokenomics.rs
crates/bleep-governance/: Cargo.toml
crates/bleep-governance/src/: ai_hooks.rs  ai_reputation.rs  apip.rs  constitution.rs  deterministic_activation.rs  forkless_upgrades.rs  governance_binding.rs  governance_core.rs  governance_engine.rs  governance_voting.rs  lib.rs  mod.rs  off_chain_voting.rs  proposal_lifecycle.rs  protocol_evolution.rs  protocol_rules.rs  safety_constraints.rs  self_amending.rs  tests.rs  zk_voting.rs
crates/bleep-indexer/src/: indexes.rs
crates/bleep-interop/: Cargo.toml  layer3_bridge.rs  lib.rs  nullifier_store.rs
crates/bleep-interop/bleep-connect-adapters/src/: lib.rs
crates/bleep-interop/bleep-connect-commitment-chain/src/: lib.rs
crates/bleep-interop/bleep-connect-core/src/: lib.rs
crates/bleep-interop/bleep-connect-crypto/src/: lib.rs
crates/bleep-interop/bleep-connect-executor/src/: lib.rs
crates/bleep-interop/bleep-connect-layer1-social/src/: lib.rs
crates/bleep-interop/bleep-connect-layer2-fullnode/: Cargo.toml
crates/bleep-interop/bleep-connect-layer2-fullnode/src/: lib.rs
crates/bleep-interop/bleep-connect-layer3-zkproof/: Cargo.toml
crates/bleep-interop/bleep-connect-layer3-zkproof/src/: lib.rs
crates/bleep-interop/bleep-connect-layer4-instant/src/: lib.rs
crates/bleep-interop/bleep-connect-types/src/: lib.rs
crates/bleep-interop/src/: bleep_connect.rs  interoperability.rs  layer3_bridge.rs  lib.rs  mod.rs  nullifier_store.rs
crates/bleep-p2p/: Cargo.toml
crates/bleep-p2p/src/: P2PNode.rs  ai_security.rs  dark_routing.rs  gossip_protocol.rs  kademlia_dht.rs  lib.rs  message_protocol.rs  mod.rs  multi_hop_routing.rs  onion_routing.rs  p2p_network.rs  p2p_node.rs  peer_manager.rs  quantum_crypto.rs  tests.rs
crates/bleep-pat/: Cargo.toml
crates/bleep-pat/src/: ai_automation.rs  engine.rs  error.rs  gas_model.rs  intent.rs  lib.rs  mod.rs  pat_core.rs  pat_engine.rs  registry.rs  state_diff.rs  tests.rs  token.rs
crates/bleep-rpc/: Cargo.toml
crates/bleep-rpc/src/: lib.rs  rpc.rs
crates/bleep-scheduler/src/: built_in.rs  registry.rs
crates/bleep-state/: Cargo.toml
crates/bleep-state/src/: advanced_fault_detector.rs  ai.rs  cross_shard_transaction.rs  crypto.rs  lib.rs  mod.rs  p2p.rs  rollback_engine.rs  self_healing_orchestrator.rs  shard_lifecycle.rs  shard_manager.rs  sharding.rs  state_manager.rs  (+3 more)
crates/bleep-telemetry/: Cargo.toml
crates/bleep-telemetry/src/: energy_module.rs  load_balancer.rs  metrics.rs  tests.rs
crates/bleep-vm/: Cargo.toml  LICENSE
crates/bleep-vm/src/: error.rs  execution_engine.rs  gas_metering.rs  intent.rs  lib.rs  mod.rs  tests.rs  types.rs  vm_core.rs  wasm_runtime.rs
crates/bleep-vm/src/crosschain/: connect_bridge.rs  native_bridge.rs
crates/bleep-vm/src/engines/: evm_engine.rs  wasm_engine.rs  wasm_engine_adapter.rs  zk_engine.rs  zk_engine_adapter.rs
crates/bleep-vm/src/execution/: executor.rs
crates/bleep-vm/src/router/: vm_router.rs
crates/bleep-vm/src/runtime/: gas_model.rs  gas_model_base.rs  memory.rs  sandbox.rs
crates/bleep-wallet-core/: Cargo.toml
crates/bleep-wallet-core/src/: mod.rs  tests.rs  wallet.rs  wallet_core.rs
crates/bleep-zkp/: Cargo.toml
docs/: Automation_engine.md  Bleep connect.md  Sharding.md  ai_decision_module.md  architecture.md  bleep-vm.md  consensus.md  crypto.md  glossary.md  governance.md  index.md  pat.md
docs/specs/: rpc_api_spec.md  state_transition.md
docs/tutorials/: build_node.md  tutorials.md  write_contract.md
scripts/: create-wallet.sh  database_migrations.rs  deploy_testnet.sh  fund-and-send-transaction.sh  fund-wallet.sh  send-transaction.sh  validator_monitor.py
scripts/dev_utils/: bench.rs  keygen.rs
tests/: benchmark_test.rs  cli_tests.rs  consensus_finality_test.rs  edge_test.rs  energy_efficiency_test.rs  fault_tolerance_test.rs  full_node_test.rs  integration_test.rs  interoperability_test.rs  load_balancing_test.rs  mod.rs  networking_p2p_test.rs  performance_test.rs  scalability_test.rs  security_test.rs  smart_contract_test.rs  smart_contract_vm_test.rs  storage_integrity_test.rs  stress_test.rs  test_p2p.rs
(+4 files in other folders)
