[package]
name = "bleep"
version = "1.0.0"
edition = "2021"
authors = ["Muhammad Attahir"]
license = "MIT OR Apache-2.0"
description = "BLEEP Blockchain - AI-powered, quantum-secure, cross-chain decentralized ecosystem."
repository = "https://github.com/bleep-project/bleep"
readme = "README.md"

[dependencies]
# Async Runtime & Concurrency
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["codec"] }
async-trait = "0.1.77"
futures = "0.3.30"
rayon = "1.8.1"
parking_lot = "0.12.1"


# Serialization & Encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.31"
bincode = "1.3.3"
hex = "0.4.3"
parity-scale-codec = "3.6.9"
base64 = "0.21.7"

# Cryptography & Hashing
blake2 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
blst = "0.3.11"
schnorrkel = "0.11.4"
ed25519-dalek = "2.1.1"
secp256k1 = { version = "0.28.2", features = ["rand", "recovery"] }
k256 = "0.13.3"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
aes-gcm = "0.10.3"
hkdf = "0.12.4"

# Post-Quantum Cryptography
pqcrypto = { version = "0.15", optional = true }
pqcrypto-kyber = { version = "0.8.0", optional = true }
pqcrypto-falcon = { version = "0.4.0", optional = true }
pqcrypto-sphincsplus = { version = "0.7.0", optional = true }
kyber = "0.1.1"
threshold_crypto = "0.4.0"
clang-sys = "1.4.0"

# Zero-Knowledge Proofs (ZKP)
ark-circom = "0.5.0"
ark-groth16 = "0.5.0"
ark-bn254 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-serialize = "0.4.0"
bellman = "0.14.0"
groth16 = "0.1.0"
ark-r1cs-std = "0.4.0"
halo2_proofs = "0.3.0"  # Updated from git to stable halo2_proofs
merkle_light = "0.3.0"

# Blockchain Networking & P2P
libp2p = "0.53.2"
quinn = "0.10.2"
noise-protocol = "0.2.0"
dashmap = "5.5.3"
kademlia-dht = "1.2.0"
tendermint = "0.37.0"
tendermint-rpc = "0.34.0"

# Blockchain Core
sp-core = "32.0.0"
sp-runtime = "32.0.0"
sp-io = "28.0.0"       # Updated to latest substrate version
web3 = "0.19.0"
ethers-core = "=2.0.7"  # Pin to exactly version 2.0.7
ethers = "=2.0.7"      # Make sure ethers matches the core version
bigdecimal = "0.4.2"

# Database & Storage
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
sled = "0.34.7"
redb = "1.5.0"
lru = "0.12.3"

# AI & Machine Learning
tensorflow = "0.21.0"
ndarray = "0.15.6"
rust-bert = "0.21.0"
tch = { version = "0.13", features = ["download-libtorch"] }
smartcore = "0.3.2"
tract-onnx = "0.21.1"
ort = "2.0.0-alpha.4"

# API & HTTP
warp = "0.3.6"
reqwest = { version = "0.11.24", features = ["json", "rustls-tls"] }
hyper = { version = "1.2.0", features = ["full"] }

# Logging & Error Handling
log = "0.4.21"
env_logger = "0.11.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.39"
anyhow = "1.0.80"

# Configuration & Metrics
config = "0.14.0"
clap = { version = "4.5.1", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }

# Testing & Development
[dev-dependencies]
tokio-test = "0.4.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.4.0"
quickcheck = "1.0.3"
mockall = "0.12.1"
test-log = "0.2.14"
fake = "2.9.2"

[features]
default = ["mainnet"]
mainnet = []
testnet = []
simulator = []
quantum = ["pqcrypto", "pqcrypto-kyber", "pqcrypto-falcon", "pqcrypto-sphincsplus"] 
