[package]
name = "bleep"
version = "1.0.0"
edition = "2021"
authors = ["Muhammad Attahir"]
license = "MIT OR Apache-2.0"
description = "BLEEP Blockchain - AI-powered, quantum-secure, cross-chain decentralized ecosystem."
repository = "https://github.com/bleep-project/bleep"
readme = "README.md"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
warp = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.80"

# Your internal crates (assumed path or workspace setup)
bleep_core = { path = "crates/bleep_core" }
bleep_wallet_core = { path = "crates/bleep_wallet_core" }
bleep_ai = { path = "crates/bleep_ai" }
bleep_crypto = { path = "crates/bleep_crypto" }
bleep_pat = { path = "crates/bleep_pat" }
bleep_state = { path = "crates/bleep_state" }
bleep_telemetry = { path = "crates/bleep_telemetry" }
bleep_governance = { path = "crates/bleep_governance" }

[[bin]]
name = "bleep-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "rpc"
path = "src/bin/rpc.rs"
