[package]
name = "bleep-core"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Core data structures and blockchain logic for the BLEEP ecosystem."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha3 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

# Internal crates (relative to workspace root)
bleep-crypto = { path = "../bleep-crypto" }
bleep-ai = { path = "../bleep-ai" }
bleep-state = { path = "../bleep-state" }
bleep-p2p = { path = "../bleep-p2p" } 
