[package]
name = "bleep-core"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Core data structures and blockchain logic for the BLEEP ecosystem."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha3 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }

# zk-SNARK / Merkle proof dependencies
ark-ff = "0.4"
ark-std = "0.4"
ark-crypto-primitives = "0.4"
ark-bls12-381 = "0.4"

# Internal workspace crates
bleep-crypto = { path = "../bleep-crypto" }
bleep-p2p = { path = "../bleep-p2p" }
bleep-ai = { path = "../bleep-ai" }
bleep-state = { path = "../bleep-state" }
