[package]
name = "bleep-core"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Core data structures, transaction processing, identity proofing, and anti-loss logic for the BLEEP blockchain ecosystem."
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization & Encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
hex = "0.4.3"

# Hashing & Cryptography
sha3 = "0.10"
sha2 = "0.10"
blake2 = "0.10"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }

# Quantum & Signature (delegated to bleep-crypto)
# Referenced but implemented in bleep-crypto

# Zero-Knowledge Proofs
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-groth16 = "0.5.0"
ark-crypto-primitives = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.0"

# Async & Concurrency
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1.77"
parking_lot = "0.12.1"

# Time & Logging
chrono = { version = "0.4.34", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

# Internal Crates
bleep-crypto = { path = "../bleep-crypto" }
bleep-p2p = { path = "../bleep-p2p" }
bleep-ai = { path = "../bleep-ai" }
bleep-state = { path = "../bleep-state" }

[dev-dependencies]
tokio-test = "0.4.3"
test-log = "0.2.14"
proptest = "1.4.0"

[workspace]
members = [
    "crates/bleep-core",
]
