[package]
name = "bleep-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
description = "Cryptographic primitives and post-quantum security modules for the BLEEP blockchain ecosystem."
license = "MIT OR Apache-2.0"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

# Cryptographic Hashing
sha3 = "0.10"
sha2 = "0.10"
blake2 = "0.10"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
hex = "0.4.3"
ring = "0.17.8" # for SHA3 context hashing

# PQ Cryptography (Falcon + Kyber)
falcon = "0.4.0"
kyber = "0.1.1"

# AEAD Encryption (Kyber + AES Hybrid)
aes-gcm = "0.10.3"
rand = "0.8.5"

# ZKP: Groth16 over BLS12-381
ark-bls12-381 = "0.4.0"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
ark-groth16 = "0.5.0"
ark-serialize = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"

# Merkle Tree (custom or reused)
# if you're using your own implementation, you can skip this
merkle-light = "0.3.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Concurrency
tokio = { version = "1.36", features = ["full"] }
parking_lot = "0.12.1"
rayon = "1.8.1"

# Error Handling
thiserror = "1.0.39"
anyhow = "1.0.80"

# Filesystem I/O
serde_json = "1.0"
serde_yaml = "0.9.31"

[workspace]
members = [
    "crates/bleep-ai",
    "crates/bleep-cli",
    "crates/bleep-core",
    "crates/bleep-p2p",
    "crates/bleep-consensus",
    "crates/bleep-state",
    "crates/bleep-crypto",
    "crates/bleep-rpc",
    "crates/bleep-vm",
    "crates/bleep-governance",
    "crates/bleep-telemetry",
    "crates/bleep-wallet-core",
    "crates/bleep-indexer",
    "crates/bleep-auth",
    "crates/bleep-scheduler"
]
