[package]
name = "bleep-connect"
version = "1.0.0"
edition = "2021"
authors = ["Muhammad Attahir <bleepecosystem@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "BLEEP Connect: Cross-Chain Interoperability Engine with Quantum Security and ZKP"
repository = "https://github.com/bleep-project/bleep"

[dependencies]
# Async and Concurrency
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Hashing & Cryptography
sha2 = "0.10"
blake2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
ed25519-dalek = "2.1"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Ethereum
ethers = { version = "2.0.7", features = ["abigen", "tokio-runtime"] }

# Solana
solana-client = "1.18.3"
solana-sdk = "1.18.3"

# Polkadot/Substrate
subxt = "0.35"

# Cosmos SDK (placeholder, implement if you have bindings)
cosmos-sdk = "0.1.0" # or use custom crate

# Aptos
aptos-sdk = "0.4.1"

# Sui
sui-sdk = "0.2.1"

# TON
ton-blockchain = "0.1.0"

# Bitcoin
bitcoin = "0.30"

# AI / ML - Anomaly Detection
ndarray = "0.15"
linfa = "0.7.0"
linfa-clustering = "0.7.0"

# ZKP with Arkworks
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
ark-groth16 = "0.4"
ark-bls12-381 = "0.4"
ark-r1cs-std = "0.4"
ark-crypto-primitives = "0.4"

# Logging & Errors
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

# Utilities
tokio-util = { version = "0.7", features = ["codec"] }
dashmap = "5.5"

[workspace]
members = [
    "crates/bleep-interop",
]
