[package]
name = "bleep"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad Attahir <your-email@example.com>"]
description = "BLEEP: Quantum-Secure, AI-Native, Self-Healing Blockchain Ecosystem"
license = "MIT"
repository = "https://github.com/your-repo/bleep"

[dependencies]
# Async and concurrency
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1.80"

# Logging and error handling
log = "0.4"
thiserror = "1.0"

# Serde for serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Crypto (quantum, zk, AES, ed25519, etc.)
pqcrypto-kyber = "0.7.2"
pqcrypto-sphincsplus = "0.7.2"
aes-gcm = { version = "0.10", features = ["aes"] }
zeroize = "1.6"
ed25519-dalek = { version = "1", features = ["std"] }
blake3 = "1.5"
sha2 = "0.10"
blake2 = "0.10"

# ZKP and SNARKs (mock or real libraries)
bellman = "0.14"                     # For Groth16 if needed
ff = "0.13"
pairing = "0.23"
zksnark = { git = "https://github.com/privacy-scaling-explorations/halo2.git", package = "halo2", optional = true }

# HD Wallet and Mnemonic
bip39 = "1.1"
hdwallet = "0.5.0"

# Blockchain utilities
ethers = { version = "2.0", features = ["abigen", "contract", "providers"] }
solana-client = "1.18"
solana-sdk = "1.18"
bitcoin = "0.30"
subxt = { version = "0.35", features = ["substrate-compat"] }
cosmos-sdk = { git = "https://github.com/informalsystems/cosmos-rust.git", optional = true }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core.git", package = "aptos-sdk", optional = true }
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", optional = true }
ton-blockchain = { git = "https://github.com/ton-blockchain/ton.git", optional = true }

# AI and ML with PyTorch
tch = { version = "0.13", features = ["download-libtorch"] }
linfa = { version = "0.6", features = ["ndarray", "serde"] }

# Database and storage
rocksdb = "0.21"

# Misc
hex = "0.4"
rand = "0.8"
rayon = "1.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Networking (optional if P2P is complex)
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "rustls-tls"] }

# Ink! (if you're compiling for Substrate smart contracts)
ink = { version = "4.3.0", optional = true }

# Optional features for WASM/ink
[features]
default = []
std = ["serde/std", "thiserror/std", "tokio/full", "ink/std"]

[workspace]
members = [
    "crates/bleep-wallet-core",
]
