[package]
name    = "bleep-connect-layer2-fullnode"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bleep-connect-types            = { path = "../bleep-connect-types" }
bleep-connect-crypto           = { path = "../bleep-connect-crypto" }
bleep-connect-commitment-chain = { path = "../bleep-connect-commitment-chain" }
tokio     = { version = "1.36", features = ["full"] }
dashmap   = "5.5"
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing   = "0.1"
hex       = "0.4.3"
thiserror = "1.0"
# HTTP client for real chain RPC calls in query_state_root().
# Using rustls to avoid OpenSSL system dependency.
reqwest   = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
